#pragma once

class Celda {
private:
    bool ocupada;
public:
    void ocupar();
    void liberar();
};
