#pragma once

class GestorColisiones {
public:
    void verificarColision();
};
