#pragma once

class Nivel {
private:
    int nivelActual;
public:
    void subirNivel();
};
