#pragma once

#include <vector>
using namespace std;

#include "Puntaje.h"

class RegistroPuntuacion {
private:
public:
    void guardarPuntaje(Puntaje* puntaje);
};
