#pragma once

#include <vector>
using namespace std;

#include "Celda.hpp"

class Tablero {
private:
public:
    void limpiarLineas();
    void agregarPieza();
};
