#pragma once

class Timer {
private:
    int tiempoRestante;
public:
    void iniciar();
    void detener();
    void reiniciar();
};
